# yashima-operation

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  conanfile.py
.github/: .gitignore
.github/workflows/: ci.yml
include/: config.hpp  render_init.hpp
public/: index.html
public/css/: styles.css
public/js/: main.js
scripts/: build.sh  clean.ps1  clean.sh  dockering.sh  git-branching.ps1  git-commiting.ps1  git-merging.ps1  git-pushing.ps1  git-pushing.sh  run-executable.sh
scripts/utilities/: common-utilities.ps1  common-utilities.sh
src/: main.cpp
tests/: test_main.cpp
